pip install black

black --target-version=py37 .\forums\views.py
black --check --target-version=py37 .\forums\views.py

pylint 