@@ -1,1 +1,2 @@
 pre-commit==2.4.0
+pylint==2.5.2
