@@ -1,4 +1,4 @@
-Django==2.2.12
+Django==2.2.13
 pytz==2019.3
 humanize==0.5.1
 python-dateutil==2.8.0
